# IntegralCalculator_Threads

./: .gitignore  CMakeLists.txt  conf.txt  configuration.txt  example.conf  main.cpp  mewn.txt  program  program.cpp  script.py
1-dim/: CMakeLists.txt  conf.txt  integr_main.cpp
config/: config.cpp  config.h
integral/: integral.cpp  integral.h
